# cargo-forge

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  forge.toml
cargo-forge-core/: Cargo.toml
cargo-forge-core/src/: build.rs  check.rs  config.rs  fix.rs  lib.rs  output.rs  platform.rs  target.rs
forge-core/: Cargo.toml
forge-core/src/: build.rs  check.rs  clean.rs  config.rs  init.rs  platform.rs  workspace.rs
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
