[workspace]
members = [".", "cargo-forge-core", "xtask"]
default-members = ["."]
resolver = "2"

[package]
name = "forge-release"
version = "0.1.1"
edition = "2021"
authors = ["Eric Ratliff <eric@waveletsolutions.com>"]
description = "Turn-key cross-platform release builds for Rust projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/waveletsolutions/cargo-forge"
homepage = "https://cargo-forge.dev"
documentation = "https://docs.rs/cargo-forge"
readme = "README.md"
keywords = ["cross-compile", "build", "release", "zig", "cargo"]
categories = ["development-tools::build-utils"]
exclude = ["release-artifacts/", "forge.toml"]

[[bin]]
name = "cargo-forge"
path = "src/main.rs"

[dependencies]
cargo-forge-core = { version = "0.1.1", path = "cargo-forge-core" }