[package]
name = "cargo-forge-core"
version = "0.1.1"
edition = "2021"
authors = ["Eric Ratliff <eric@waveletsolutions.com>"]
description = "Core library for cargo-forge -- cross-platform Rust release builds"
license = "MIT OR Apache-2.0"
repository = "https://github.com/waveletsolutions/cargo-forge"
homepage = "https://cargo-forge.dev"
documentation = "https://docs.rs/forge-core"
readme = "../README.md"
keywords = ["cross-compile", "build", "release", "zig", "cargo"]
categories = ["development-tools::build-utils"]
publish = true

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
# Error handling
anyhow = "1.0"
# Colors
colored = "2.1"
# Command detection
which = "5.0"
# TOML config parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# Directory resolution
dirs = "5.0"
# HTTP downloads (proxy-aware, pure Rust)
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
# Archive extraction
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"